fix gallery photos on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -88,7 +88,7 @@ text-align: center;
   overflow-x: auto;
 }
 #gallery-photo {
-  width: 100%;
+  max-width: 100%;
 }
 
 /* added the bits to make the schedule scrollable on smaller screens*/
